--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,177 +1,16 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@article{vanveen2024clinical,
-  title={Adapted Large Language Models Can Outperform Medical Experts in Clinical Text Summarization},
-  author={D. {Van Veen} and C. {Van Uden} and L. Blankemeier and J.B. Delbrouck and A. Aali and C. Bluethgen and A. Pareek and M. Polacin and E.P. Reis and A. Seehofnerova and N. Rohatgi and P. Hosamani and W. Collins and N. Ahuja and C.P. Langlotz and J. Hom and S. Gatidis and J. Pauly and A.S. Chaudhari},
-  journal={Nature Medicine},
-  year={2024},
-  doi={10.1038/s41591-024-02855-5},
-  url={https://doi.org/10.1038/s41591-024-02855-5},
-  pdf={https://arxiv.org/pdf/2309.07430.pdf},
-  html={https://stanfordmimi.github.io/clin-summ/},
-  code={https://github.com/StanfordMIMI/clin-summ},
-  poster={poster_clin_summ.pdf},
+@article{moll2025structuring,
+  title={Structuring Radiology Reports: Challenging LLMs with Lightweight Models},
+  author={Moll, Johannes and Fay, Louisa and Azhar, Asfandyar and Ostmeier, Sophie and Lueth, Tim and Gatidis, Sergios and Langlotz, Curtis and Delbrouck, Jean-Benoit},
+  journal={arXiv preprint arXiv:2506.00200},
+  year={2025}
 }
 
-@article{blankemeier2024merlin,
-  title={Merlin: A Vision Language Foundation Model for 3D Computed Tomography},
-  author={L. Blankemeier and J.P. Cohen and A. Kumar and D. {Van Veen} and S.J.S. Gardezi and M. Paschali and Z. Chen and J.B. Delbrouck and E.P. Reis and C. Truyts and C. Bluethgen and M. Engmann and J. Kjeldskov and S. Ostmeier and M. Varma and J.M.J. Valanarasu and Z. Fang and Z. Huo and Z. Nabulsi and D. Ardila and W. Weng and E. Amarao and N. Ahuja and J. Fries and N. Shah and A. Johnston and R.D. Boutin and A. Wentland and C.P. Langlotz and J. Hom and S. Gatidis and A.S. Chaudhari},
-  journal={arXiv},
-  pdf={https://arxiv.org/pdf/2406.06512},
-  year={2024}
-}
-
-@article{stanford-aimi-chexagent-2024,
-    title={CheXagent: Towards a Foundation Model for Chest X-Ray Interpretation},
-    author={Z. Chen and M. Varma and J.B. Delbrouck and M. Paschali and L. Blankemeier and D. {Van Veen} and J.M.J. Valanarasu and A. Youssef and J.P. Cohen and E.P. Reis and E.B. Tsai and A. Johnston and C. Olsen and T.M. Abraham and S. Gatidis and A.S. Chaudhari and C.P. Langlotz},
-    journal={arXiv},
-    year={2024},
-    pdf={https://arxiv.org/abs/2401.12208.pdf},
-    code={https://github.com/Stanford-AIMI/CheXagent},
-    html={https://stanford-aimi.github.io/chexagent.html},
-    model={https://huggingface.co/StanfordAIMI/CheXagent-8b},
-    demo={http://34.31.232.110:8888/},
-}
-
-@article{ijms25105473,
-	author={D. {Van Veen} and J. Galaz-Montoya and L. Shen and P. Baldwin and A.S. Chaudhari and D. Lyumkis and M.F. Schmid and W. Chiu and J. Pauly},
-	title={Missing Wedge Completion via Unsupervised Learning with Coordinate Networks},
-	journal={International Journal of Molecular Sciences},
-	year={2024},
-	url={https://www.mdpi.com/1422-0067/25/10/5473},
-	pdf={https://www.biorxiv.org/content/10.1101/2024.04.12.589090v2.full.pdf},
-	doi={10.3390/ijms25105473}
-}
-
-@article{Gatti2024.05.06.24306965,
-        author = {A. Gatti and L. Blankemeier and D. {Van Veen} and B. Hargreaves and S.L. Delp and G.E. Gold and F. Kogan and A.S. Chaudhari},
-        title={ShapeMed-Knee: A Dataset and Neural Shape Model Benchmark for Modeling 3D Femurs},
-        year={2024},
-        doi={10.1101/2024.05.06.24306965},
-        url={https://www.medrxiv.org/content/early/2024/05/07/2024.05.06.24306965},
-        journal={medRxiv},
-	pdf={https://www.medrxiv.org/content/10.1101/2024.05.06.24306965v1.full.pdf},
-	code={https://github.com/gattia/ShapeMedKnee},
-	model={https://huggingface.co/aagatti/ShapeMedKnee},
-	data={https://huggingface.co/datasets/aagatti/ShapeMedKnee},
-}
-
-@article{aali2024benchmark,
-    title={A Benchmark of Domain-Adapted Large Language Models for Generating Brief Hospital Course Summaries},
-    author={A. Aali and D. {Van Veen} and Y.I. Arefeen and J. Hom and C. Bluethgen and E.P. Reis and S. Gatidis and N. Clifford and J. Daws and A.S. Tehrani and J. Kim and A.S. Chaudhari},
-    journal={arXiv},
-    year={2024},
-    pdf={https://arxiv.org/abs/2403.05720.pdf},
-}
-
-@inproceedings{gatti2024neural,
-  title={Neural Shape Models Meaningfully Localize Features Relevant to Osteoarthritis Disease: Data from the Osteoarthritis Initiative},
-  author={A. Gatti and L. Blankemeier and D. {Van Veen} and B. Hargreaves and S. Delp and F. Kogan and G. Gold and A.S. Chaudhari},
-  booktitle={The International Society for Magnetic Resonance in Medicine (ISMRM)},
-  year={2024},
-}
-
-@inproceedings{vanveen2023radadapt,
-      title={RadAdapt: Radiology Report Summarization via Lightweight Domain Adaptation of Large Language Models}, 
-      author={D.* {Van Veen} and C.* {Van Uden} and M. Attias and A. Pareek and C. Bluethgen and M. Polacin and W. Chiu and J.B. Delbrouck and J.M.Z. Chaves and C.P. Langlotz and A.S. Chaudhari and J. Pauly},
-      booktitle = {Association for Computational Linguistics (ACL) - BioNLP},
-      year={2023},
-      pdf={https://arxiv.org/pdf/2305.01146.pdf},
-      html={https://davevanveen.com/radadapt/},
-      code={https://github.com/davevanveen/radadapt},
-      slides={slides_radadapt.pdf},
-}
-
-@inproceedings{gatti2023neural,
-  title={Neural Shape Representations Predit Knee Pain Better than Conventional Shape Models},
-  author={A. Gatti and D. {Van Veen} and G. Gold and S. Delp and A.S. Chaudhari},
-  booktitle={The International Society for Magnetic Resonance in Medicine (ISMRM)},
-  year={2023},
-  pdf={ismrm_gatti_2023.pdf},
-}
-
-@inproceedings{van2022scale,
-  title={Scale-Agnostic Super-Resolution in MRI using Feature-Based Coordinate Networks},
-  author={D. {Van Veen} and R. {van der Sluijs} and B. Ozturkler and A. Desai and C. Bluethgen and R. Boutin and M. Willis and G. Wetzstein and D. Lindell and S. Vasanawala and J. Pauly and A.S. Chaudhari},
-  booktitle = {Medical Imaging with Deep Learning (MIDL)},
-  year={2022},
-  pdf={https://arxiv.org/pdf/2210.08676.pdf},
-  poster={poster_midl.pdf},
-}
-
-@inproceedings{lindell2021bacon,
-author = {D. Lindell and D. {Van Veen} and J.J. Park and G. Wetzstein},
-title = {BACON: Band-Limited Coordinate Networks for Multiscale Scene Representation},
-booktitle = {Computer Vision and Pattern Recognition (CVPR)},
-year={2022},
-pdf={https://arxiv.org/pdf/2112.04645.pdf},
-html={https://www.computationalimaging.org/publications/bacon/},
-video={https://www.youtube.com/watch?v=zIH3KUCgJEA},
-poster={poster_bacon.pdf},
-}
-
-@inproceedings{vanveen2021realtime,
-	title={Real-Time Video Denoising to Reduce Ionizing Radiation Exposure in Fluoroscopic Imaging},
-	author={D. {Van Veen} and B. Duffy and L. Wang and K. Datta and T. Zhang and G. Zaharchuk and E. Gong},
-	booktitle={Medical Image Computing and Computer Assisted Intervention (MICCAI) - MLMIR},
-	year={2021},
-	url={https://link.springer.com/chapter/10.1007/978-3-030-88552-6_11},
-	doi={10.1007/978-3-030-88552-6_11},
-	pdf={https://link.springer.com/chapter/10.1007/978-3-030-88552-6_11},
-	}
-
-@inproceedings{vanusing,
-  title={Using Untrained Convolutional Neural Networks to Accelerate MRI in 2D and 3D},
-  author={{Van Veen}, D. and Desai, A. and Heckel, R. and Chaudhari, A.S.},
-  booktitle={The International Society for Magnetic Resonance in Medicine (ISMRM)},
-  year={2021},
-  pdf={https://index.mirasmart.com/ISMRM2021/PDFfiles/1964.html},
-  code={https://github.com/davevanveen/unsup_mri},
-}
-
-@article{vanveen2020compressed,
-      title={Compressed Sensing with Deep Image Prior and Learned Regularization}, 
-      author={D. {Van Veen} and A. Jalal and M. Soltanolkotabi and E. Price and S. Vishwanath and A.G. Dimakis},
-      journal={arXiv},
-      year={2020},
-      pdf={https://arxiv.org/pdf/1806.06438.pdf},
-      code={https://github.com/davevanveen/compsensing_dip},
-}
-
-
-@inproceedings{DBLP:journals/corr/abs-2006-06292,
-  author    = {W. Toussaint and
-               D. {Van Veen} and
-               C. Irwin and
-               Y. Nachmany, et al.},
-  title     = {Design Considerations for High Impact, Automated Echocardiogram Analysis},
-  booktitle   = {International Conference of Machine Learning (ICML) - ML for Global Health},
-  volume    = {abs/2006.06292},
-  year      = {2020},
-  url       = {https://arxiv.org/abs/2006.06292},
-  eprinttype = {arXiv},
-  eprint    = {2006.06292},
-  pdf={https://arxiv.org/pdf/2006.06292.pdf},
-  code={https://github.com/dssg/usal_echo_public},
-  poster={poster_dssg.pdf},
-}
-
-@inproceedings{slavkovaimplementing,
-  title={Implementing Compressed Sensing with Deep Image Prior to Reconstruct Undersampled Dynamic Contrast-Enhanced MRI Data of the Breast},
-  author={K. Slavkova and J.C. DiCarlo and D. {Van Veen} and A.K. Syed and A. Jalal and J. Virostko and A.G. Sorace and A.G. Dimakis and T. E. Yankeelov},
-  booktitle={The International Society for Magnetic Resonance in Medicine (ISMRM)},
-  year={2020},
-  pdf={https://index.mirasmart.com/ISMRM2020/PDFfiles/2317.html},
-}
-
-@inproceedings{vanveen2018compressed,
-      title={Compressed Sensing Recovery of Medical Images using Deep Image Prior}, 
-      author={D. {Van Veen} and A. Jalal and M. and E. Price and S. Vishwanath and A.G. Dimakis},
-      booktitle={Neural Information Processing Systems (NeurIPS) - MedNeurIPS},
-      year={2018},
-      pdf={paper_mednips_2018.pdf},
-      code={https://github.com/davevanveen/compsensing_dip},
+@article{delbrouck2025automated,
+  title={Automated Structured Radiology Report Generation},
+  author={Delbrouck, Jean-Benoit and Xu, Justin and Moll, Johannes and Thomas, Alois and Chen, Zhihong and Ostmeier, Sophie and Azhar, Asfandyar and Li, Kelvin Zhenghao and Johnston, Andrew and Bluethgen, Christian and others},
+  journal={arXiv preprint arXiv:2505.24223},
+  year={2025}
 }
