--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -5,12 +5,21 @@
   title={Structuring Radiology Reports: Challenging LLMs with Lightweight Models},
   author={Moll, Johannes and Fay, Louisa and Azhar, Asfandyar and Ostmeier, Sophie and Lueth, Tim and Gatidis, Sergios and Langlotz, Curtis and Delbrouck, Jean-Benoit},
   journal={arXiv preprint arXiv:2506.00200},
-  year={2025}
+  year={2025},
+  url={https://arxiv.org/abs/2506.00200},
+  pdf={2505.00200v2.pdf},
+  html={https://stanford-aimi.github.io/structuring.html},
+  code={https://github.com/jomoll/rad-report-structuring},
 }
 
 @article{delbrouck2025automated,
   title={Automated Structured Radiology Report Generation},
   author={Delbrouck, Jean-Benoit and Xu, Justin and Moll, Johannes and Thomas, Alois and Chen, Zhihong and Ostmeier, Sophie and Azhar, Asfandyar and Li, Kelvin Zhenghao and Johnston, Andrew and Bluethgen, Christian and others},
   journal={arXiv preprint arXiv:2505.24223},
-  year={2025}
+  year={2025},
+  url={https://arxiv.org/abs/2505.24223},
+  pdf={2505.24223v2.pdf},
+  html={https://stanford-aimi.github.io/srrg.html},
+  code={https://github.com/jbdel/StructEval/tree/main},
+  poster={AutomatedStructuredRadiologyReportGenerationACL.pdf},
 }
