--- a/_news/acl2025.md
+++ b/_news/acl2025.md
@@ -4,4 +4,4 @@ date: 2025-07-28 15:59:00-0400
 inline: true
 ---
 
-Presented our work on [Automated Structured Radiology Report Generation](https://aclanthology.org/2025.acl-long.1301/#) at the [ACL2025](https://2025.aclweb.org) main conference in Vienna.
+Presented our work on [Automated Structured Radiology Report Generation](https://aclanthology.org/2025.acl-long.1301/#) at the [ACL2025](https://2025.aclweb.org) main conference in Vienna, Austria.
